Adding repo and issue link to package

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "material-design-palette",
-  "version": "0.0.2",
+  "version": "0.0.3",
   "description": "An easy API for using the Material Design color palette in javascript",
   "main": "./lib/index.js",
   "scripts": {
@@ -11,6 +11,11 @@
     "test": "mocha --compilers js:babel-core/register",
     "lint": "eslint *.babel.js src test"
   },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/drew-walker/material-design-palette.git"
+  },
+  "bugs": "https://github.com/drew-walker/material-design-palette/issues",
   "keywords": [
     "Material Design",
     "Color Palette",
